技术文档/vpn/strongswan/iptables.txt
# Generated by iptables-save v1.3.5 on Fri Feb 10 15:18:51 2017
*mangle
:PREROUTING ACCEPT [5116:659427]
:INPUT ACCEPT [888:98620]
:FORWARD ACCEPT [6:426]
:OUTPUT ACCEPT [647:58335]
:POSTROUTING ACCEPT [653:58761]
COMMIT
# Completed on Fri Feb 10 15:18:51 2017
# Generated by iptables-save v1.3.5 on Fri Feb 10 15:18:51 2017
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [4483:1713818]
:OUTPUT ACCEPT [13572:2476388]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
#-A INPUT -s 10.0.0.0/255.0.0.0 -j ACCEPT 
-A INPUT -s 172.16.0.0/255.240.0.0 -j ACCEPT 
-A INPUT -s 192.168.0.0/255.255.0.0 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 1723 -j ACCEPT 
-A INPUT -p udp -m udp --dport 1701 -j ACCEPT 
-A INPUT -p udp -m udp --dport 500 -j ACCEPT 
-A INPUT -p udp -m udp --dport 4500 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 47 -j ACCEPT 
#-A INPUT -p esp -j ACCEPT
-A INPUT -p gre -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT 
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT 
-A INPUT -d 127.0.0.1 -j ACCEPT 
-A INPUT -p icmp -j ACCEPT 
-A INPUT -j DROP 
-A FORWARD -o ppp+ -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --set-mss 1000
COMMIT
# Completed on Fri Feb 10 15:18:51 2017
# Generated by iptables-save v1.3.5 on Fri Feb 10 15:18:51 2017
*nat
:PREROUTING ACCEPT [21395:2976607]
:POSTROUTING ACCEPT [123:7730]
:OUTPUT ACCEPT [116:7289]
-A POSTROUTING -s 10.2.0.0/255.255.0.0 -o eth0 -j SNAT --to-source 172.20.2.101 
#-A POSTROUTING -s 10.1.0.0/16 -o eth0 -m policy --dir out --pol ipsec -j ACCEPT
#-A POSTROUTING -s 10.2.0.0/16 -o eth0 -j MASQUERADE
COMMIT
# Completed on Fri Feb 10 15:18:51 2017
